[build-system]
requires = ["setuptools>=61.0", "pandas>=2.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "reservation_calendar_MrYutz"
version = "0.0.1"
authors = [
  { name="MrYutz", email="gregbazar@gmail.com" },
]
description = "A Reservation Calendar System"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU GPLv3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MrYutz/reservation_calendar"